04.jun (la)
      - fix #10935: fix Soundfont path //
      - 
03.jun (la)
      - fix #10934: double error message on opening a 2.0 score
02.jun (la)
      - fix #10915: Rename WRC to WRC.BAT in CMakeList.txt
01.jun (la)
      - add shortcut for navigating between score tab
      - more page format option accessible via plugins
29.may (lv)
      - fix #10849: musicxml exports lyrics only with notes in voice 1
        note: file attached to http://musescore.org/en/node/10168 not handled yet
24.may (la)
      - fix #4526: Adding ties to chords
      - fix #9805: Second Voice can end up broken (patch by fnbecker)
      - Never create empty score on startup
20.may (la)
      - accommodate two digit version X.X
      - fix #9307: Nested tuplets causes crash
19.may (la)
      - fix crash reported in #10674 comment 2
17.may (la)
      - fix #1722: Continue last session tries to open discarded score
      - fix #9338: chordname scrolls offscreen
16.may (la)
      - fix #10660: Continue last session & play panel enabled
      - fix #5900: Courtesy accidentals lost in transposition
      - fix #9332: Unable to create slash-headed notes on drum staff
      - fix #10165: Measure num. every n shows number (every n) + 1 (patch by Miwarre)
      - import part name from MusicXML
      - Add support for notehead color in MusicXML export and import
      - Add shape notehead support in MusicXML export and import
8.may (la)
      - set notehead shape from plugin framework
4.may (la)
      - fix #9342: repeat entry doesn't scroll display
27.apr (la)
      - fix #10048: Opening Page Settings causes crash
23.apr (la)
      - fix #10370: Shortcuts cannot be cleared
        implement "reset to defaults" in preferences-shortcuts dialog
20.apr (la)
      - fix #10335: importCharsetList does not appear
18.apr (la)
      - fix #10264: Select a flag and enter a note causes crash
12.apr (la)
      - fix #7814:  error with single-line-staff percussion notation