@@ -38,8 +38,7 @@ class SymbolDialog : public QWidget, Ui::SymbolDialogBase {
 
    private slots:
       void setDirty();
-      void startDragElement(Element*);
-      void deleteElement();
+      void systemFlagChanged(int state);
 
    public:
       SymbolDialog(QWidget* parent = 0);
