@@ -51,13 +51,6 @@
        </property>
       </spacer>
      </item>
-     <item>
-      <widget class="QPushButton" name="deleteButton" >
-       <property name="text" >
-        <string>Delete</string>
-       </property>
-      </widget>
-     </item>
     </layout>
    </item>
   </layout>
